# FeOLa

./: README.md
cli_test/: frontend.py
core/: Cargo.toml
core/src/: main.rs
sources/helloworld/: Cargo.toml
sources/helloworld/src/: lib.rs
