[package]
name = "core"
version = "0.1.0"
authors = ["cafehaine <kilian.guillaume@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.5.2"
glob = "0.3.0"
xdg = "2.2.0"
log = "0.4.8"
env_logger = "0.7.0"
